<resources>
    <string name="app_name">Receipesta</string>
    <string name="label">E-mail or username</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="username">Username</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="lorem_ipsum_words">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="_120">120</string>
    <string name="_45">45</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="soup">Soup</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="diet_type">Diet Type</string>
    <string name="primal">Primal</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ketegonic">Ketegonic</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="apply">APPLY</string>
    <string name="search">Search.</string>
    <string name="image_for_food">Image for Food</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="_4_6">4,6</string>
    <string name="description">Description</string>
</resources>