<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user_interface.login.LoginPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="134dp"
        android:layout_height="136dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/recipe"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="106dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@android:string/autofill"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_or_email_field"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailOrUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_or_email_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/log_in"
        app:shapeAppearanceOverlay="@style/ButtonShapeAppereance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        />
    <TextView
        android:id="@+id/text_dont_have_account"
        android:layout_width="175dp"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="80dp"
        android:textSize="16sp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containedButton"/>

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="47dp"
        android:text="@string/sign_up"
        android:textAlignment="textStart"
        android:textColor="@color/linkbuttoncolor"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/text_dont_have_account"
        app:layout_constraintTop_toBottomOf="@id/containedButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>